--- a/src/app/algorithmus/algorithmus.scss
+++ b/src/app/algorithmus/algorithmus.scss
@@ -1,3 +1,5 @@
+@use "./../../basic";
+
 form {
   display: flex;
   flex-direction: column;
@@ -23,14 +25,14 @@ form {
   gap: 0.5rem;
   width: 26.25rem;
   height: 30px;
-  border: 1px solid var(--border-color);
+  border: 1px solid basic.$border-color;
   padding: 1rem;
   padding-block: 1.5rem;
   cursor: pointer;
 }
 
 input[id='summe'] {
-  border: 1px solid var(--border-color);
+  border: 1px solid basic.$border-color;
   padding-inline: 0.5rem;
   margin-left: 0.5rem;
   max-width: 100%;
@@ -49,18 +51,18 @@ input[id='summe'][type='number'] {
 input[id='summe']:focus {
   border-color: var(--primary);
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--primary);
-  box-shadow: inset 0 1px 1px #00000013, 0 0 8px var(--primary);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
+  box-shadow: inset 0 1px 1px #00000013, 0 0 8px var basic.$primary;
 }
 
 input[type='checkbox'] {
   appearance: none;
   background-color: #fff;
   font: inherit;
-  color: var(--secondary);
+  color: basic.$secondary;
   width: 1rem;
   height: 1rem;
-  border: 0.15em solid var(--secondary);
+  border: 0.15em solid basic.$secondary;
   border-radius: 0.15em;
   transform: translateY(-0.075em);
   display: grid;
@@ -72,8 +74,8 @@ input[type='checkbox']::before {
   width: 0.65em;
   height: 0.65em;
   transform: scale(0);
-  transition: var(--first-transition);
-  box-shadow: inset 1em 1em var(--secondary);
+  transition: basic.$first-transition;
+  box-shadow: inset 1em 1em basic.$secondary;
   transform-origin: bottom left;
   clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
@@ -85,8 +87,8 @@ input[type='checkbox']:checked::before {
 section {
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--border-color);
-  border-radius: var(--border-radius);
+  border: 1px solid basic.$border-color;
+  border-radius: basic.$border-radius;
   padding: 1rem;
   background-color: white;
   width: 50%;
@@ -105,7 +107,7 @@ section {
   }
   .divider {
     height: 1rem;
-    background-color: var(--border-color);
+    background-color: basic.$border-color;
   }
   .first-part {
     position: relative;
