--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -1,3 +1,4 @@
+@use "./../../basic";
 
 .dashboard-statistics {
     display: flex;
@@ -6,13 +7,13 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-radius: var(--border-radius);
-        border: 1px solid var(--border-color);
+        border-radius: basic.$border-radius;
+        border: 1px solid basic.$border-color;
         padding: 1rem;
         width: 20rem;
         height: 8rem;
         h2 {
-            color: var(--secondary);
+            color: basic.$secondary;
             font-size: 1rem;
             font-weight: 600;
         }
@@ -27,8 +28,8 @@
             align-self: baseline;
             width: 1.875rem;
             height: 1.875rem;
-            background: var(--third);
-            border-radius: var(--border-radius);
+            background: basic.$third;
+            border-radius: basic.$border-radius;
             padding: 0.5rem;
             box-sizing: content-box;
         }
@@ -42,7 +43,7 @@
     .dashboard-list {
         display: flex;
         flex-direction: column;
-        color: var(--secondary);
+        color: basic.$secondary;
         .dashboard-title {
             display: flex;
             justify-content: space-between;
@@ -63,8 +64,8 @@
             width: 20rem;
             gap: 1rem;
              li {
-                border-radius: var(--border-radius);
-                border: 1px solid var(--border-color);
+                border-radius: basic.$border-radius;
+                border: 1px solid basic.$border-color;
                 padding: 1rem;
                 button {
                     display: flex;
@@ -80,45 +81,45 @@
                         }
                         span {
                             font-size: .8rem;
-                            color: var(--twelfth);
+                            color: basic.$twelfth;
                         }
                     }
                     .dashboard-list-status {
                             display: flex;
-                            border-radius: var(--border-radius);
+                            border-radius: basic.$border-radius;
                             padding-inline: 0.3rem;
                             font-size: .75rem;                     
                         &.paid{
-                            background: var(--fourth);
-                            color: var(--seventh);
+                            background: basic.$fourth;
+                            color: basic.$seventh;
                         }
                         &.unpaid{
-                            background: var(--fifth);
-                            color: var(--secondary);
+                            background: basic.$fifth;
+                            color: basic.$secondary;
                         }
                         &.standart {
-                            background: var(--fifth);
-                            color: var(--secondary);
+                            background: basic.$fifth;
+                            color: basic.$secondary;
                         }
                         &.optional {
-                            background: var(--third);
-                            color: var(--secondary);
+                            background: basic.$third;
+                            color: basic.$secondary;
                         }
                         &.premium {
-                            background: var(--primary);
-                            color: var(--sixth);
+                            background: basic.$primary;
+                            color: basic.$sixth;
                         }
                         &.pending {
-                            background: var(--fifth);
-                            color: var(--secondary);
+                            background: basic.$fifth;
+                            color: basic.$secondary;
                         }
                         &.approved {
-                            background: var(--eighth);
-                            color: var(--ninth);
+                            background: basic.$eighth;
+                            color: basic.$ninth;
                         }
                         &.rejected {
-                            background: var(--tenth);
-                            color: var(--eleventh);
+                            background: basic.$tenth;
+                            color: basic.$eleventh;
                         }
                     }
                 }
