--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -1,57 +1,62 @@
-@use "./../../../basic";
+@use './../../../basic';
 
-.container {
-    max-width: 600px;
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    padding: 30px;
-    margin: auto;
+.wrapper-content {
+  display: flex;
+  width: 75rem;
+  background-color: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 0.75rem;
+}
+
+.container-edit,
+.container-firma {
+  display: flex;
+  flex-direction: column;
+  width: 37.5rem;
+  height: 37.5rem;
+  padding: 1.875rem;
+  overflow: hidden;
 }
 
 .logo {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 1.25rem;
 }
 
 h1 {
-    text-align: center;
-    margin: 10px 0 5px;
+  text-align: center;
+  margin: 0.625rem 0 0.3125rem;
 }
 .subtitle {
-    text-align: center;
-    color: basic.$secondary;
-    font-weight: 500;
-    margin-bottom: 30px;
+  text-align: center;
+  color: basic.$secondary;
+  font-weight: 500;
+  margin-bottom: 1.875rem;
 }
 h2 {
-    border-bottom: 2px solid basic.$border-color;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
+  border-bottom: 2px solid basic.$border-color;
+  padding-bottom: 0.3125rem;
+  margin-bottom: 1.25rem;
 }
 .details {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 12px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 0.75rem;
 }
 .details div {
-    margin-bottom: 5px;
-}
-.label {
-    font-weight: bold;
-    color: #555;
-}
-.steuer {
-    margin-top: 20px;
-    font-weight: bold;
-    color: #555;
+  margin-bottom: 5px;
 }
 
+dt {
+  font-weight: bold;
+  color: basic.$secondary;
+}
 
-
-
-form {
-  width: 100%;
+.founding,
+.tax {
+  margin-top: 1.25rem;
+  font-weight: bold;
+  color: #555;
 }
 
 .form-group {
@@ -81,8 +86,7 @@ form {
   line-height: 1.25rem;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out 0.15s,
-    -webkit-box-shadow ease-in-out 0.15s;
+  -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
@@ -90,7 +94,10 @@ form {
 .form-control:focus {
   border-color: basic.$primary;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-    0 0 8px var(--primary);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--primary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
+}
+
+button.edit {
+  align-self: flex-end;
 }
