invoice style adjust

--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -48,10 +48,10 @@
 </table>
 
 <div class="totals">
-    <p><span>Subtotal:</span> €780.00 €</p>
-    <p><span>Provison (19%):</span> €200.20 €</p>
-    <p><span>Tax (19%):</span> €148.20 €</p>
-    <h3><span>Total:</span> 928.20 €</h3>
+    <p><span>Subtotal:</span> <span>780.00 €</span></p>
+    <p><span>Provison (19%):</span> <span>200.20 €</span></p>
+    <p><span>Tax (19%):</span> <span>148.20 €</span></p>
+    <h3><span>Total:</span> <span>928.20 €</span></h3>
 </div>
 
 <footer class="provisions">
