--- a/src/app/shared/invoice/invoice.scss
+++ b/src/app/shared/invoice/invoice.scss
@@ -1,3 +1,6 @@
+@use "./../../../basic";
+
+
 .invoice-container {
   background: #fff;
   max-width: 700px;
@@ -59,8 +62,12 @@
 }
 
 .totals {
-  margin-top: 20px;
-  text-align: right;
+    text-align: right;
+    margin-top: 20px;
+}
+
+.totals span {
+    margin-right: 30px;
 }
 
 .totals p,
