invoice ein a4 format

--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -4,15 +4,18 @@
     <h1>Start in Krypto</h1>
     <p>Chiemgaustr. 156<br>81549 München</p>
     </div>
+    <a href="/" class="logo">
+      <img width="60" height="60" src="./assets/SK-metatag.png" alt="Start in Krypto">
+    </a>
     <div class="invoice-info">
     <h2>RECHNUNG</h2>
-    <p><strong>Invoice #00123</strong><br>
+    <p><strong>Rechnung Nr. #00123</strong><br>
     Date: 24. Mai 2024</p>
     </div>
 </header>
 
 <section class="bill-to">
-    <h3>Bill To:</h3>
+    <h3>Rechnung an:</h3>
     <p>
     <strong>Damian Poloczek</strong><br>
     Chiemgastr 156<br>
@@ -48,9 +51,9 @@
 </table>
 
 <div class="totals">
-    <p><span>Subtotal:</span> <span>780.00 €</span></p>
-    <p><span>Provison (19%):</span> <span>200.20 €</span></p>
-    <p><span>Tax (19%):</span> <span>148.20 €</span></p>
+    <p><span>Zwischensumme:</span> <span>780.00 €</span></p>
+    <p><span>Provison (6.5%):</span> <span>200.20 €</span></p>
+    <p><span>MwSt. (19%):</span> <span>148.20 €</span></p>
     <h3><span>Total:</span> <span>928.20 €</span></h3>
 </div>
 
