--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -33,17 +33,32 @@
     </thead>
     <tbody>
     <tr>
-        <td>Individuelle Express Krypto-Einführung</td>
+        <td>Grundgebühr</td>
         <td>2</td>
         <td>300.00 €</td>
     </tr>
     <tr>
-        <td>Wallet-Einrichtung & Sicherheit</td>
+        <td>Individuelle Express Krypto-Einführung</td>
         <td>1.5</td>
         <td>180.00 €</td>
     </tr>
     <tr>
+        <td>Börsenwahl & Einrichtung</td>
+        <td>3</td>
+        <td>300.00 €</td>
+    </tr> 
+    <tr>
         <td>Kaufstrategie & Coin-Auswahl</td>
+        <td>3</td>
+        <td>300.00 €</td>
+    </tr>
+    <tr>
+        <td>Wallet-Einrichtung & Sicherheit</td>
+        <td>3</td>
+        <td>300.00 €</td>
+    </tr>
+    <tr>
+        <td>Steuertool für deine Abwicklung</td>
         <td>3</td>
         <td>300.00 €</td>
     </tr>
