new services and setting with algorithmus UI

--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -73,10 +73,10 @@
   <table>
     <thead>
       <tr>
-        <td>
+        <td class="first-part">
           Leistung
         </td>
-        <td>
+        <td class="first-part">
           Gebühr
         </td>
       </tr>
@@ -84,8 +84,8 @@
         <div class="divider"></div>
     <tbody>
     <tr>
-        <td class="first-part">Grundgebühr</td>
-        <td class="first-part">{{basicFeeProvision | number:'1.2-2'}} €</td>
+        <td>Grundgebühr</td>
+        <td>{{basicFeeProvision | number:'1.2-2'}} €</td>
     </tr>
     <tr>
       <td>Individuelle Express Krypto-Einführung</td>
