--- a/src/app/algorithmus/algorithmus.scss
+++ b/src/app/algorithmus/algorithmus.scss
@@ -114,7 +114,6 @@ section {
     background-color: basic.$border-color;
   }
   .first-part {
-    position: relative;
-    margin-bottom: 1rem;
+    font-weight: 700;
   }
 }
