--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -1,17 +1,17 @@
 <h1 class="title">Einstellungen</h1>
 
 <ul>
+  <li>
+    <a routerLink="firma" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/algorithm.svg" alt="">
+      Firma
+    </a>
+  </li>
     <li>
-      <button routerLink="algorithmus" routerLinkActive="active">
+      <a routerLink="algorithmus" routerLinkActive="active">
         <img width="25" height="25" src="./assets/algorithm.svg" alt="">
         Algorithmus
-      </button>
-    </li>
-    <li>
-      <button routerLink="company" routerLinkActive="active">
-        <img width="25" height="25" src="./assets/algorithm.svg" alt="">
-        Firma
-      </button>
+      </a>
     </li>
 </ul>
 
