--- a/src/app/settings/settings.scss
+++ b/src/app/settings/settings.scss
@@ -12,7 +12,7 @@ ul {
         align-items: center;
         height: 1.875rem;
         background: none;
-        button {
+        a {
             display: flex;
             align-items: center;
             width: 100%;
@@ -27,7 +27,7 @@ ul {
                 height: 1.5625rem;
             }
         }
-        button.active {
+        a.active {
             background-color: basic.$primary;
         }
     }
