--- a/src/app/settings/algorithmus/algorithmus.html
+++ b/src/app/settings/algorithmus/algorithmus.html
@@ -1,1 +1,43 @@
-<p>algorithmus works!</p>
+<div class="container-preise">
+  <h2>Leistungsübersicht</h2>
+
+  <table class="price-table">
+    <thead>
+      <tr>
+        <th>Leistung</th>
+        <th>Preis</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Grundgebühr</td>
+        <td>700,00 €</td>
+      </tr>
+      <tr>
+        <td>Individuelle Express Krypto-Einführung</td>
+        <td>0,00 €</td>
+      </tr>
+      <tr>
+        <td>Börsenwahl & Einrichtung</td>
+        <td>0,00 €</td>
+      </tr>
+      <tr>
+        <td>Kaufstrategie & Coin-Auswahl</td>
+        <td>0,00 €</td>
+      </tr>
+      <tr>
+        <td>Wallet-Einrichtung & Sicherheit</td>
+        <td>0,00 €</td>
+      </tr>
+      <tr>
+        <td>Steuertool für deine Abwicklung</td>
+        <td>0,00 €</td>
+      </tr>
+      <tr>
+        <td>Laufende Betreuung</td>
+        <td>0,00 €</td>
+      </tr>
+    </tbody>
+  </table>
+    <button class="edit" onclick="toggleEditMode()" disabled="true">EDIT</button>
+</div>
