--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -52,6 +52,7 @@ dt {
   color: basic.$secondary;
 }
 
+.email,
 .founding,
 .tax {
   margin-top: 1.25rem;
@@ -96,8 +97,4 @@ dt {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--primary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
-}
-
-button.edit {
-  align-self: flex-end;
 }
