--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -85,7 +85,7 @@
     <tbody>
     <tr>
         <td>Grundgebühr</td>
-        <td>{{basicFeeProvision | number:'1.2-2'}} €</td>
+        <td>{{algorithmusControl.basicFeeProvision | number:'1.2-2'}} €</td>
     </tr>
     <tr>
       <td>Individuelle Express Krypto-Einführung</td>
