--- a/src/app/settings/algorithmus/algorithmus.html
+++ b/src/app/settings/algorithmus/algorithmus.html
@@ -11,31 +11,31 @@
     <tbody>
       <tr>
         <td>Grundgebühr</td>
-        <td>700,00 €</td>
+        <td>{{algorithmusControl.basicFeeProvision | number:'1.2-2'}} €</td>
       </tr>
       <tr>
         <td>Individuelle Express Krypto-Einführung</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.firstStepProvision | number:'1.2-2'}} %</td>
       </tr>
       <tr>
         <td>Börsenwahl & Einrichtung</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.exchangeSetupProvision | number:'1.2-2'}} %</td>
       </tr>
       <tr>
         <td>Kaufstrategie & Coin-Auswahl</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.buyStrategyProvision | number:'1.2-2'}} %</td>
       </tr>
       <tr>
         <td>Wallet-Einrichtung & Sicherheit</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.walletSetupProvision | number:'1.2-2'}} %</td>
       </tr>
       <tr>
         <td>Steuertool für deine Abwicklung</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.taxToolProvision | number:'1.2-2'}} %</td>
       </tr>
       <tr>
         <td>Laufende Betreuung</td>
-        <td>0,00 €</td>
+        <td>{{algorithmusControl.ongoingSupportProvision | number:'1.2-2'}} €</td>
       </tr>
     </tbody>
   </table>
