--- a/src/basic.scss
+++ b/src/basic.scss
@@ -12,6 +12,7 @@
   $tenth: rgb(254, 226, 226);
   $eleventh: rgb(158, 17, 17);
   $twelfth: rgb(161 157 154);
+  $thirteenth: rgb(255, 255, 255);
   $required: #ff0000;
   $border-color: #e4e5e5;
   $border-radius: 0.625rem;
