invoice footer adjust

--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -77,9 +77,9 @@
     <p>
     Bitte überweisen Sie den Gesamtbetrag innerhalb von 14 Tagen nach Erhalt dieser Rechnung.
     Zahlungen können per Banküberweisung oder in Kryptowährung erfolgen.
-    Bei Fragen zu dieser Rechnung kontaktieren Sie uns bitte unter
+    Bei Fragen zu dieser Rechnung kontaktieren Sie uns bitte unter:
     <a href="mailto:elisabeth@startinkrypto.de">elisabeth@startinkrypto.de</a>.
     </p>
-    <p><strong>Account Nr:</strong> DE1234561354613, <strong>Tax Nr:</strong> DE987654321</p>
+    <p> Bankverbindung: {{companyControl.bankAccount}}, USt-Idnr: {{companyControl.taxNumber}}</p>
 </footer>
 </div>
