--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -29,7 +29,7 @@
         <tr>
             <th>Service</th>
             <th>Provison</th>
-            <th>Amount</th>
+            <th>Gebühr</th>
         </tr>
         </thead>
         <tbody>
@@ -73,7 +73,7 @@
         <h3><span>Total:</span> <span>928.20 €</span></h3>
     </div>
 
-    <footer class="provisions">
+    <footer>
         <p>
         Bitte überweisen Sie den Gesamtbetrag innerhalb von 14 Tagen nach Erhalt dieser Rechnung.
         Zahlungen können per Banküberweisung oder in Kryptowährung erfolgen.
