--- a/src/app/algorithmus/algorithmus.scss
+++ b/src/app/algorithmus/algorithmus.scss
@@ -94,6 +94,7 @@ section {
   background-color: basic.$thirteenth;
   width: 50%;
   gap: 1rem;
+  margin-bottom: 1rem;
   tr {
     td {
       &:first-child {
