--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -16,39 +16,19 @@
             </tr>
         </thead>
         <tbody class="">
-            <tr class="">
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
+             @for (customer of customerControl.Customers; track customer) {
+            <tr>
+                <td>{{ customer.firstName }}</td>
+                <td>{{ customer.lastName }}</td>
+                <td>{{ customer.street }}</td>
+                <td>{{ customer.number }}</td>
+                <td>{{ customer.postalCode }}</td>
+                <td>{{ customer.city }}</td>
+                <td>{{ customer.mobile }}</td>
+                <td>{{ customer.portfolio }}</td>
+                <td>{{ customer.subscription }}</td>
             </tr>
-            <tr class="">
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-            </tr>
-            <tr class="">
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-                <td class=""></td>
-            </tr>
+            }
         </tbody>
     </table>
 </div>
