--- a/src/app/customers/customers.scss
+++ b/src/app/customers/customers.scss
@@ -15,7 +15,7 @@ thead tr td {
 td{
     border: 1px solid #ddd;
     padding: 8px;
-    background-color: white;
+    background-color: basic.$thirteenth;
 }
 
 tr:hover td {
