--- a/src/app/settings/algorithmus/algorithmus.scss
+++ b/src/app/settings/algorithmus/algorithmus.scss
@@ -1,8 +1,10 @@
+@use './../../../basic.scss';
+
 .container-preise {
-    display: flex;
-    flex-direction: column;
-    // margin-top: 2rem;
-    font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
+  // margin-top: 2rem;
+  font-family: 'Inter', sans-serif;
 
   h2 {
     font-size: 1.5rem;
@@ -16,25 +18,26 @@
     margin-top: 1rem;
 
     th:first-child {
-        text-align: left;
-        padding: 0.75rem;
+      text-align: left;
+      padding: 0.75rem;
     }
 
     th:last-child {
-        text-align: right;
-        padding: 0.75rem;
+      text-align: right;
+      padding: 0.75rem;
     }
     td {
       text-align: left;
       padding: 0.75rem;
       border-bottom: 1px solid #ddd;
+      background-color: white;
     }
 
     th {
       font-weight: 600;
       background-color: #f9f9f9;
     }
-    
+
     td:last-child {
       text-align: right;
       font-weight: 500;
@@ -43,8 +46,8 @@
     tr {
       transition: background-color 0.2s ease;
 
-      &:hover {
-        background-color: #f5f5f5;
+      &:hover td {
+        background-color: basic.$body-bg;
       }
     }
   }
