--- a/src/app/newcustomer/newcustomer.html
+++ b/src/app/newcustomer/newcustomer.html
@@ -27,8 +27,8 @@
 
   <!-- Name -->
   <div class="form-group">
-    <label class="control-label" id="label-name" for="name">Nachname:</label>
-    <input class="form-control" type="text" placeholder="Mustermann" id="name" formControlName="name">
+    <label class="control-label" id="label-name" for="lastName">Nachname:</label>
+    <input class="form-control" type="text" placeholder="Mustermann" id="lastName" formControlName="lastName">
   </div>
 
   <!-- Street -->
@@ -45,8 +45,8 @@
 
   <!-- Postcode -->
   <div class="form-group">
-    <label class="control-label" id="label-postcode" for="postcode">Postleitzahl:</label>
-    <input class="form-control" type="text" placeholder="81500" id="postcode" formControlName="postcode">
+    <label class="control-label" id="label-postcode" for="postCode">Postleitzahl:</label>
+    <input class="form-control" type="text" placeholder="81500" id="postCode" formControlName="postCode">
   </div>
 
   <!-- City -->
@@ -73,12 +73,12 @@
     <div class="form-radio">
         
       <label for="offersYes">
-      <input class="form-control" type="radio" id="offersYes" formControlName="receiveOffers" value="yes">
+      <input class="form-control" type="radio" id="offersYes" formControlName="portfolio" value="yes">
         Ja
       </label>
 
       <label for="offersNo">
-        <input class="form-control" type="radio" id="offersNo" formControlName="receiveOffers" value="no">
+        <input class="form-control" type="radio" id="offersNo" formControlName="portfolio" value="no">
         Nein
       </label>
     </div>
